testReadSuccess() fixed